# 3DEP-Farm

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: test.yml
3DEP-Farm/: data_fetcher.py  information.txt  pipeline_template.json  subsampler.py  utilities.py
3DEP-Farm/doc/: data_fetcher.html  logger_creator.html  subsampler.html  utilities.html
tests/: test_utilities.py
