[metadata]
name = 3DEP-Farm
version = 0.0.1
author = Milky Bekele
author_email = milkybekele@gmail.com
description = Python package for getting 3DEP geographic elevation data and more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DePacifier/3DEP-Farm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True